<resources>
    <string name="app_name">Collabocode</string>
    <string name="title_projects">Projects</string>
    <string name="title_forum">Forum</string>
    <string name="title_learn">Learn</string>

    <string name="title_my_projects">My teams</string>
    <string name="title_shared_with_me">Shared with me</string>

    <string name="sign_in_failed_message">Sign in failed</string>
    <string name="sign_in_success_message">Signed in successfully</string>
    <string name="welcome_message">Welcome to Collabocode!</string>

    <string name="create_account_button">Create account</string>
    <string name="sign_in_button">Sign in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_label">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="email_sent_message">Email sent</string>
    <string name="forgot_password_dialog_message">Send password reset email to</string>
    <string name="send_label">Send</string>
    <string name="email_empty_toast">Enter an email</string>
    <string name="password_empty_toast">Enter a password</string>
    <string name="error_occurred_message">Error occurred</string>
    <string name="sign_up_button">Sign up</string>
    <string name="already_have_account_button">Already have an account</string>
    <string name="hint_name">Name</string>
    <string name="email_invalid">Email invalid</string>
    <string name="name_empty_toast">Enter your name="" </string>
    <string name="by_signing_up_label">By signing up, you agree to the <a href="https://github.com/MoonfaceDev/Collabocode/blob/master/privacy%20policy.md">Privacy Policy</a></string>
    <string name="privacy_policy_link">https://github.com/MoonfaceDev/Collabocode/blob/master/privacy%20policy.md</string>
    <string name="default_google_id">1082557730971-hjbap6re8piuv6nv9s01duiebf8pnbik.apps.googleusercontent.com</string>
    <string name="folder_description">folder</string>
    <string name="new_team_label">New team</string>
    <string name="edit_team_label">Edit team</string>
    <string name="untitled_project_label">Untitled team</string>
    <string name="title_empty_toast">Enter a title</string>
    <string name="new_file_label">New file</string>
    <string name="saving_label">Saving…</string>
    <string name="all_changes_saved_label">All changes saved</string>
    <string name="facebook_app_id">2148252865437043</string>
    <string name="fb_login_protocol_scheme">fb2148252865437043</string>
    <string name="add_people_title">Add people</string>
    <string name="details_title">Details</string>
    <string name="delete_title">Delete</string>
    <string name="share_project_label">Share team</string>
    <string name="share_project_dialog_message">Share this team with</string>
    <string name="user_id_hint">User id</string>
    <string name="share_label">Share</string>
    <string name="uid_empty_toast">Enter a user id</string>
    <string name="user_does_not_exist_toast">User does not exist</string>
    <string name="shared_with_label">Shared with</string>
    <string name="profile_picture_content_description">profile picture</string>
    <string name="user_already_has_access">User already has access</string>
    <string name="you_label">You</string>
    <string name="delete_project_message">Are you sure you want to delete this team? This action cannot be undone.</string>
    <string name="delete_project_label">Delete team</string>
    <string name="icon_view_description">icon view</string>
    <string name="add_post_label">Add post…</string>
    <string name="rename_label">Rename</string>
    <string name="star_label">Star</string>
    <string name="unstar_label">Unstar</string>
    <string name="team_info_content_description">team info</string>
    <string name="team_icon_content_description">group icon</string>
    <string name="description_label">Team description (optional)</string>
    <string name="team_code_label">Team code:</string>
    <string name="disable_team_code_label">Disable team code</string>
    <string name="reset_team_code_label">Reset team code</string>
    <string name="code_enabled_label">Code enabled</string>
    <string name="join_team_label">Join team</string>
    <string name="hint_team_code">Team code</string>
    <string name="join_label">Join</string>
    <string name="code_empty_toast">Enter team code</string>
    <string name="leave_label">Leave team</string>
    <string name="reply_label">Reply</string>
    <string name="copy_label">Copy</string>
    <string name="delete_label">Delete</string>
    <string name="add_code_label">Add code</string>
    <string name="post_label">Post</string>
    <string name="code_title_label">Code title</string>
    <string name="hint_title">Title</string>
    <string name="overwrite_code_label">Overwrite code</string>
    <string name="overwrite_dialog_message">Are you sure you want to overwrite %1$s ?</string>
    <string name="discard_post_label">Discard post</string>
    <string name="discard_dialog_message">Are you sure you want to exit this post? All content will be lost</string>
    <string name="people_label">People</string>
    <string name="remove">Remove</string>
    <string name="make_admin">Make admin</string>
    <string name="demote_from_admin">Demote from admin</string>
    <string name="post_content_empty_toast">Enter post content</string>
    <string name="edit_label">Edit</string>
    <string name="leave_dialog_message">Are you sure you want to leave %1$s ?</string>
    <string name="replies_label">%1$d replies</string>
    <string name="one_reply_label">1 reply</string>
    <string name="reply_content_empty_toast">Enter reply content</string>
    <string name="discard_reply_label">Discard reply</string>
    <string name="discard_reply_dialog_message">Are you sure you want to exit this reply? All content will be lost</string>
    <string name="delete_post_label">Delete post</string>
    <string name="delete_reply_label">Delete reply</string>
    <string name="delete_post_message">Are you sure you want to delete this post? This action cannot be undone.</string>
    <string name="delete_reply_message">Are you sure you want to delete this reply? This action cannot be undone.</string>


</resources>
