<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".SignInFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/create_account_button"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_label"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_NAME"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_PASSWORD"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/privacy_policy_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/by_signing_up_label"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/stylized_button"
        android:text="@string/sign_up_button"
        android:textSize="18sp"
        android:transitionName="main_button"
        tools:ignore="UnusedAttribute"/>

</RelativeLayout>