<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="24dp"
        android:layout_height="4dp"
        android:layout_margin="8dp"
        android:background="@drawable/bottom_dialog_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            android:text=""
            android:textColor="@color/textDarkPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/team_info_content_description"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_info_black_24dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/add_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/add_people_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/star_label"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableStart="@drawable/ic_create_black_24dp"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/edit_label"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableStart="@drawable/ic_exit_black_24dp"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/leave_label"
        android:textSize="16sp" />

</LinearLayout>