<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="313dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/forgot_password_label"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:text="@string/forgot_password_dialog_message"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="11dp"
            android:paddingTop="4dp"
            android:paddingEnd="11dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/cancel_label"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/send_label"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>