<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="313dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/new_team_label"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/icon_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic_add_photo_colored_24dp"
                    android:contentDescription="@string/team_icon_content_description" />

                <EditText
                    android:id="@+id/name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/untitled_project_label"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="21dp"
                android:background="#EEEEEE"
                android:gravity="start"
                android:hint="@string/description_label"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="8dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="11dp"
            android:paddingTop="4dp"
            android:paddingEnd="11dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@android:string/cancel"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@android:string/ok"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>