<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="313dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="7dp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/add_people_title"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <LinearLayout
                android:id="@+id/code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/team_code_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/code_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/enabled_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:checked="true"
                android:padding="4dp"
                android:text="@string/code_enabled_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="11dp"
            android:paddingTop="4dp"
            android:paddingEnd="11dp"
            android:paddingBottom="4dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/done"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>